# libtc-connect

./: Makefile.am  configure.ac
include/: ConnectCallback.h  HotPlugParser.h  MountMonitor.h  TCConnectInterface.h
src/: ConnectCallback.c  HotPlugParser.c  MountMonitor.c  TCConnectInterface.c
